[project]
name = "tem-sdk"
version = "1.0.0"
description="Python SDK for Tron Energy Market (https://tronenergy.market/)"
readme = {file = "README.md", content-type = "text/markdown"}
license = "apache-2.0"
authors = [
  {name = "Bohdan Kushnir"},
]
maintainers = [
  {name = "Bohdan Kushnir"}
]
keywords=[
    "tem",
    "tronenergymarket",
    "sdk",
    "energy",
    "bandwith",
    "tron",
    "trx",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/8ByteCore8/tem-sdk"
Repository = "https://github.com/8ByteCore8/tem-sdk.git"
Issues = "https://github.com//8ByteCore8/tem-sdk/issues"

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pip-audit>=2.9.0",
    "poethepoet>=0.38.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[tool.rumdl.MD007]
indent = 4

[tool.poe.tasks.check-lint]
cmd = "uv run ruff check tem-sdk/ tests/"
help = "Check ruff errors"

[tool.poe.tasks.check-format]
cmd = "uv run ruff format --check tem-sdk/ tests/"
help = "Check ruff formatting"
args = [{ name = "dir", multiple = false, positional = true, default = "./" }]

[tool.poe.tasks.check-audit]
cmd = "uv run pip-audit"
help = "Audit dependencies"

[tool.poe.tasks.tests]
cmd = "uv run pytest --cov=tem-sdk/"
help = "Run tests"

[tool.poe.tasks.check]
sequence = ["check-lint", "check-format", "check-audit", "tests -vv"]
help = "Check code before make commit"
